# MyClock

./: MyClock.c  MyClock.h  README.md  main.c  makefile.init  meson.build
gresource/: gresource.c  gresource.xml  makefile
